# hza_tagger

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
analysis/scripts/: eval_to_h5.py  evaluate.sh
common/: io.py  truth_matching.py  variables.py
converter/: run_condor.py  run_local.py
converter/configs/: hza_signal.yaml
converter/processors/: jet_dumper.py
converter/tests/: test_truth_matching.py
tagger/configs/: hza_train.yaml
tagger/scripts/: create_norm_dict.py  preprocess.sh  train.sh
warmup_material/: hza_explore_my_version.ipynb  hza_explore_original.ipynb
